--- a/css/about.scss
+++ b/css/about.scss
@@ -2113,6 +2113,7 @@ body {
 .mt300 { margin-top: 420px; }
 .ml4 { margin-left: 4px; }
 .ml5 { margin-left: 5px; }
+.ml10 { margin-left: 10px; }
 .ml16 { margin-left: 16px; }
 .ml24 { margin-left: 24px; }
 .ml30 { margin-left: 30px; }
@@ -2134,6 +2135,7 @@ body {
 .pt35 { padding-top: 35px; }
 .pt40 { padding-top: 40px; }
 .pt46 { padding-top: 46px; }
+.pt56 { padding-top: 56px; }
 .pt60 { padding-top: 60px; }
 .pt64 { padding-top: 64px; }
 .pt66 { padding-top: 66px; }
