--- a/css/about.scss
+++ b/css/about.scss
@@ -2,7 +2,15 @@ $wid : 1280px;
 @import "./reset";
 @import "./mixin";
 
-
+table {
+    margin:0;
+    padding:0;
+    background:none;
+    border:none;
+    border-collapse:collapse;
+    border-spacing:0;
+    background-image:none;
+}
 .align {
     display: flex !important;
   }
@@ -573,6 +581,7 @@ body {
     margin: 0 auto;
     padding-top: 210px;
     padding-bottom: 384px;
+    &.max1120 { max-width: 1120px; }
     .phrase {
         color: #F60035;
         font-family: 'Pretendard';
@@ -674,6 +683,15 @@ body {
         color: #fff;
         font-size: 17px;
         font-weight: 700;
+        &.gray {
+            background: #bababa;
+            color: #fff;
+        }
+        &.line {
+            background: #fff;
+            color: #747474;
+            border: 1px solid #747474;
+        }
     }
     .text1 {
         color: #464646;
@@ -1133,7 +1151,13 @@ body {
     font-style: normal;
     font-weight: 800;
     line-height: 100%;
-    letter-spacing: 0.32px;        
+    letter-spacing: 0.32px;      
+    p {
+        color: #5D5D5D;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 150%;
+    }  
 }
 .instructions { 
     color: #5D5D5D;
@@ -1739,6 +1763,13 @@ body {
         line-height: 100%;
         letter-spacing: 0.32px;        
     }
+    &.red {
+        strong {
+            font-size: 18px;
+            color: #F60035;
+            font-weight: 600;
+        }
+    }
 }
 .check-menu-box {
     margin-top: 1.4rem;
@@ -1970,6 +2001,7 @@ body {
     }
     button {
         display: block;
+        min-width: 100px;
         color: #FFF;
         font-size: 15px;
         font-weight: 700;
@@ -1977,6 +2009,16 @@ body {
         border-radius: 4px;
         margin: 30px auto 0 auto;
         padding: 12px 16px;
+    }
+    .align {
+        gap: 12px;
+        button {
+            margin: 0;
+            &.gray {
+                background: #8B8B8B;
+                color: #fff;
+            }
+        }
     }
 }
 
@@ -2086,7 +2128,146 @@ body {
     border-radius: 6px;
     background: #FEE5EB;
     padding: 6px 10px;
+    &.gray {
+        background: #E8E8E8;
+        color: #464646;
+    }
 }
+.table-list {
+    width: 100%;
+    border-top: 2px solid #bebebe;
+    thead {
+        tr {
+            th {
+                padding: 15px 16px;
+                border-bottom: 2px solid #bebebe;
+                background: #F3F3F3;
+                color: #171717;
+                font-size: 14px;
+                font-weight: 600;
+            }
+        }
+    }
+    tbody {
+        tr {
+            padding: 15px 16px;
+            cursor: pointer;
+            .alert {
+                color: #F60035;
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 130%;
+                letter-spacing: 0.3px;                
+            }
+            &:nth-child(2n) {
+                border-bottom: 2px solid #cfcfcf;
+            }
+            td {
+                color: #464646;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 15px; 
+                letter-spacing: 0.3px;                
+                .product {
+                    padding: 12px 16px;
+                    strong  {
+                        color: #F60035;
+                        font-size: 14px;
+                        font-weight: 700;
+                        line-height: 15px; 
+                        letter-spacing: 0.3px;   
+                        &.gray {
+                            color: #464646;
+                        }                     
+                    }
+                    p {
+                        color: #171717;
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: 140%;
+                        letter-spacing: 0.3px;                        
+                    }
+                }
+                img {
+                    width: 90px;
+                }
+            }
+        }
+    }
+    .order-num {
+        padding: 14px 16px;
+        border-bottom: 1px solid #cfcfcf;
+        strong {
+            color: var(--gr-80, #464646);
+            font-family: Pretendard;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 15px; /* 107.143% */
+            letter-spacing: 0.3px;
+        }
+        p {
+            color: var(--gr-80, #464646);
+            font-family: Pretendard;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 15px; /* 107.143% */
+            letter-spacing: 0.3px;
+        }
+    }
+}
+
+.pagination {
+    display: flex;
+    gap: 0.8rem;
+    justify-content: center;
+    align-items: center;
+    & ul {
+      display: flex;
+      li {
+        + li {
+            padding-top: 0;
+        }
+      }
+    }
+    .num {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #464646;
+        font-size: 14px;
+      width: 26px;
+      height: 26px;
+      cursor: pointer;
+      transition: all .3s;
+      &:hover {
+        color: #fff;
+        font-weight: 700;
+        background: #F60035;
+      }
+      &.active {
+        color: #fff;
+        font-weight: 700;
+        background: #F60035;
+      }
+    } /*number*/
+    .btn-arrow {
+      display: block;
+      width: 6px;
+      height: 12px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain;
+      text-indent: -9999px;
+      &.prev {
+        background-image: url(../img/ico_arrow_prev.svg);
+      }
+      &.next {
+        background-image: url(../img/ico_arrow_next.svg);
+      }
+    } /*arrow*/
+  } /*pagination*/
 
 
 
@@ -2099,6 +2280,7 @@ body {
 }
 .mt8 { margin-top: 8px; }
 .mt10 { margin-top: 10px; }
+.mt30 { margin-top: 30px; }
 .mt32 { margin-top: 32px; }
 .mt33 { margin-top: 33px; }
 .mt48 { margin-top: 48px; }
@@ -2114,7 +2296,9 @@ body {
 .ml4 { margin-left: 4px; }
 .ml5 { margin-left: 5px; }
 .ml10 { margin-left: 10px; }
+.ml12 { margin-left: 12px; }
 .ml16 { margin-left: 16px; }
+.ml20 { margin-left: 20px; }
 .ml24 { margin-left: 24px; }
 .ml30 { margin-left: 30px; }
 .mr6 { margin-right: 6px; }
@@ -2128,6 +2312,7 @@ body {
 .pt4 { padding-top: 4px; }
 .pt8 { padding-top: 8px; }
 .pt12 { padding-top: 12px; }
+.pt16 { padding-top: 16px; }
 .pt20 { padding-top: 20px; }
 .pt24 { padding-top: 24px; }
 .pt26 { padding-top: 26px; }
@@ -2171,6 +2356,7 @@ body {
 .pb86 { padding-bottom: 86px; }
 .pb90 { padding-bottom: 90px; }
 .pb150 { padding-bottom: 150px; }
+.pl24 { padding-left: 24px; }
 .pl48 { padding-left: 48px; }
 .pr10 { padding-right: 10px; }
 .px16 { 
