메인 퍼블 수정, conter 수정 (체크박스 중복문제)

--- a/css/about.scss
+++ b/css/about.scss
@@ -2507,6 +2507,25 @@ body {
     }
 
 }
+.spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.spinner img {
+    width: 50px; /* 스피너 크기 */
+    height: 50px;
+}
+
+/* 비디오가 로드되면 스피너를 숨김 */
+.video-loaded .spinner {
+    display: none;
+}
+
+
 
 
 
