--- a/css/about.scss
+++ b/css/about.scss
@@ -61,27 +61,39 @@ body, html{
     @include reset;
     font-family : 'Pretendard',sans-serif;
 }
+.bg-f6 { 
+    background: #f6f6f6;
+}
+.btn-apply-mobile {
+    width: calc(100% - 32px);
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    background: #F60035;
+    border-radius: 16px;
+    height: 60px;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 130%;
+}
 
 /* Webkit 기반 브라우저 */
 .scroll-y { overflow-y: auto; }
 .scroll-y::-webkit-scrollbar {
     width: 12px;
 }
-
 .scroll-y::-webkit-scrollbar-track {
     background: #fff;
 }
-
 .scroll-y::-webkit-scrollbar-thumb {
     background-color: #E8E8E8;
     border-radius: 10px;
     border: 2px solid #fff; /* 스크롤바 막대와 트랙 사이에 여백 */
 }
-
 .scroll-y::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
-
 .font-title {
     @include font(900, 90px);
     color: #F60035;
@@ -94,7 +106,6 @@ body, html{
         font-size: 30px;
         font-weight: 700;
     }
-
   }
 .font-sub {
     color: #000;
@@ -117,14 +128,19 @@ a {text-decoration: none; color:#000;}
 body {
     position: relative; 
     overflow-x: auto;
-    min-width: 1440px;
+    // min-width: 1440px;
 }
 .w100 { width: 100%; }
 .wrap {
     width: 100%;
-    // min-width: 1440px;
-    // overflow: auto;
+    &.web {
+        display: block;
+    }
+    &.mobile {
+        display: none;
+    }
 }
+
 .m0auto { margin: 0 auto; }
 .space { padding: 0 40px; }
 .space2 { padding: 164px 40px; }
@@ -576,7 +592,7 @@ body {
     }
 }
 .input-wrap {
-    width: 100%;
+    width: calc(100% - 32px) ;
     max-width: 546px;
     margin: 0 auto;
     padding-top: 210px;
@@ -2151,6 +2167,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 200;
+    width: calc(100% - 32px) ;
     max-width: 782px;
     padding: 0 24px;
     background: #fff;
