--- a/css/m_about.scss
+++ b/css/m_about.scss
@@ -11,5 +11,74 @@
             display: none;
         }
     }
+    .wrap {
+        &.web {
+            display: none;
+        }
+        &.mobile {
+            display: block;
+            width: 100%;
+            img { 
+                display: block;
+                width: 100%;
 
+             }
+        }
+    }
+
+    .btn-main {
+        bottom: 40px;
+        transform: translateX(-50%);
+        padding: 0 30px;
+        height: 60px;
+        border-radius: 50px;
+        color: black;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 800;
+        z-index: 0;
+    }    
+
+}
+@media screen and (max-width: 400px) {
+    @import "_mixin";
+
+    .footer-align {
+        &.align {
+            display: block !important;
+        }
+        > .align {
+            .ml16 { margin-left: 0; }
+        }
+    }
+    .terms-title { 
+        a { 
+            font-size: 12px !important;
+        }
+
+    }
+    footer .list { 
+        display: block;
+        gap: 10px;
+        &.align {  
+            display: block !important;
+        }
+        li {
+            + li {
+                ::before {
+                    content: "";
+                    display: block;
+                    width: 0px;
+                }
+            }                
+        }
+    }
+    .input-type3 select {
+        font-size: 10px;
+        background: url(../img/ico_arrow_down.svg) no-repeat right 12px top 50% / 12px;
+        padding: 0 8px;        
+    }
+    
+    
+   
 }
