--- a/css/about.scss
+++ b/css/about.scss
@@ -2273,6 +2273,7 @@ body {
 }
 .table-list {
     width: 100%;
+    min-width: 950px;
     border-top: 2px solid #bebebe;
     thead {
         tr {
